--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPagcrXcY3byPOnvvE3IghG",
+      "authorship_tag": "ABX9TyOUplEGEJLij/QuFdiFSKlp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,21 +39,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ScBnBJNjslHZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "JxV9RiyXr2ww"
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "\n",
+        "#University of Stirling - Spring 2023\n",
+        "\n",
+        "## ITNPAI1 - Deep Learning for Vision and NLP (2022/3)\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "-sGBEu0SQnVO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CADAupiFQn8n"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
