--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUplEGEJLij/QuFdiFSKlp",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNxwXBNkeYdIgjc7pqQynD7"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -60,6 +49,63 @@
       "metadata": {
         "id": "-sGBEu0SQnVO"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1. Problem Defination\n",
+        "## Image Classification\n",
+        "#### A model that identifies car and Trees if there is any"
+      ],
+      "metadata": {
+        "id": "mN5V5jz1yz4B"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2. Github repository\n",
+        "Invitation sent"
+      ],
+      "metadata": {
+        "id": "BC0oK5nKza0q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Dataset Creation"
+      ],
+      "metadata": {
+        "id": "Sxe_lRe8zvcx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Bbp2R_fpz1oo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "efshpl82ztdL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ww9UkckRy4-t"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
