--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxwXBNkeYdIgjc7pqQynD7"
+      "authorship_tag": "ABX9TyPc8Ih88rIxSqasDhgj2/Wp"
     },
     "kernelspec": {
       "name": "python3",
@@ -82,12 +82,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"hey\")"
+      ],
       "metadata": {
-        "id": "Bbp2R_fpz1oo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bbp2R_fpz1oo",
+        "outputId": "82de589a-f6b8-4bbe-e123-ca30fbd48dc3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hey\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
