--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPc8Ih88rIxSqasDhgj2/Wp"
+      "authorship_tag": "ABX9TyNxwXBNkeYdIgjc7pqQynD7",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -82,26 +93,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"hey\")"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Bbp2R_fpz1oo",
-        "outputId": "82de589a-f6b8-4bbe-e123-ca30fbd48dc3"
+        "id": "Bbp2R_fpz1oo"
       },
       "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hey\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
