--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxwXBNkeYdIgjc7pqQynD7",
+      "authorship_tag": "ABX9TyNQKU6s/Pk0zPCitu9LETMr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3. Dataset Creation"
+        "# 3. Dataset Creation\n",
+        "##Created dataset containing 400 images on each subset\n",
+        "## Addis Ababa Labeled Images\n",
+        "####Addis Ababa Car (400)\n",
+        "####Addis Ababa Tree (400)\n",
+        "####Addis Ababa Neither (400)\n",
+        "## Stirling Labeled Images\n",
+        "####Stirling Car (400)\n",
+        "####Stirling Tree (400)\n",
+        "####Stirling Neither (400)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Sxe_lRe8zvcx"
@@ -95,9 +106,45 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
+        "id": "NTKze0WG-vrE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VM-ZZVCJ-c_k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6bnud3D--WrO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ArD3_ocM-SNq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
         "id": "Bbp2R_fpz1oo"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
