--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQKU6s/Pk0zPCitu9LETMr",
+      "authorship_tag": "ABX9TyNccYGplvdK54fAuVnXB4Gi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,6 +107,39 @@
       "source": [],
       "metadata": {
         "id": "NTKze0WG-vrE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating labeling Dataframe and also extracting it to csv file for easier access"
+      ],
+      "metadata": {
+        "id": "Rdvep84hLYv8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stir_path = \"/content/drive/MyDrive/Deep learning/dataset/Stirling Labeled/\"\n",
+        "addis_path = \"/content/drive/MyDrive/Deep learning/dataset/Addis Ababa Labeled/\"\n",
+        "\n",
+        "def labeler_csv(path):\n",
+        "  data = []\n",
+        "  for folder in os.listdir(path):\n",
+        "      for file in os.listdir(os.path.join(path, folder)):\n",
+        "        if file != '.DS_Store':\n",
+        "          data.append([os.path.join(folder, file), folder])\n",
+        "  df = pd.DataFrame(data, columns=['filename', 'label'])\n",
+        "  # df.to_csv('/content/drive/MyDrive/Stirling_labels.csv', index=False)\n",
+        "  return(df)\n",
+        "\n",
+        "print(labeler_csv(stir_path))"
+      ],
+      "metadata": {
+        "id": "kEpo1o7NLjQN"
       },
       "execution_count": null,
       "outputs": []
