--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNccYGplvdK54fAuVnXB4Gi",
+      "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
+      "authorship_tag": "ABX9TyMQ0kior1Mo+uzYfNf9oHU2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,9 +124,16 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "\"\"\"the dataset is locate on my drive therefore it cant be accessed directly from github\n",
+        "may be i will find a way to access the zip file in github \"\"\"\n",
+        "\n",
+        "# Directory path Image dataset\n",
         "stir_path = \"/content/drive/MyDrive/Deep learning/dataset/Stirling Labeled/\"\n",
         "addis_path = \"/content/drive/MyDrive/Deep learning/dataset/Addis Ababa Labeled/\"\n",
         "\n",
+        "# Defining a function for generating dataframe of lables \n",
         "def labeler_csv(path):\n",
         "  data = []\n",
         "  for folder in os.listdir(path):\n",
@@ -139,10 +147,35 @@
         "print(labeler_csv(stir_path))"
       ],
       "metadata": {
-        "id": "kEpo1o7NLjQN"
+        "id": "kEpo1o7NLjQN",
+        "outputId": "ebb998a3-96c3-41d1-be64-ec53b6aaa5d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                   filename label\n",
+            "0       car/image1_1x13.jpg   car\n",
+            "1       car/image1_3x10.jpg   car\n",
+            "2       car/image1_3x11.jpg   car\n",
+            "3        car/image1_7x1.jpg   car\n",
+            "4       car/image1_7x29.jpg   car\n",
+            "...                     ...   ...\n",
+            "1195   tree/image9_8x30.jpg  tree\n",
+            "1196  tree/image10_1x13.jpg  tree\n",
+            "1197  tree/image10_1x11.jpg  tree\n",
+            "1198  tree/image10_1x14.jpg  tree\n",
+            "1199  tree/image10_1x16.jpg  tree\n",
+            "\n",
+            "[1200 rows x 2 columns]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
