--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyMQ0kior1Mo+uzYfNf9oHU2",
+      "authorship_tag": "ABX9TyO3X7ecyKqSx87jyxSdSYKE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,26 +30,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ITNPAI1 Project\n",
-        "Michael Bogale\n",
-        "3071806"
-      ],
-      "metadata": {
-        "id": "fluVnbKYscWk"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JxV9RiyXr2ww"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "---\n",
         "\n",
         "#University of Stirling - Spring 2023\n",
@@ -65,9 +45,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# ITNPAI1 Project\n",
+        "MICHAEL BOGALE\n",
+        "3071806"
+      ],
+      "metadata": {
+        "id": "fluVnbKYscWk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# 1. Problem Defination\n",
-        "## Image Classification\n",
-        "#### A model that identifies car and Trees if there is any"
+        "## Image Classification problem\n",
+        "Creating a deep learning model that classifies cars and trees on image dataset collected from Areal imaging on Google Earth Pro and testing its performance.\n",
+        "## Dataset collected \n",
+        "Addis Ababa \n",
+        "\n",
+        "Stirling\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "mN5V5jz1yz4B"
@@ -77,7 +74,13 @@
       "cell_type": "markdown",
       "source": [
         "# 2. Github repository\n",
-        "Invitation sent"
+        "repository created\n",
+        "\n",
+        "###Invitation sent usernames\n",
+        "\n",
+        "1. sandyCarmichael\n",
+        "2. vak000\n",
+        "3. jeferssonalex"
       ],
       "metadata": {
         "id": "BC0oK5nKza0q"
@@ -153,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
