--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyOo6JdhyiU/6h4QTU5fiX8g",
+      "authorship_tag": "ABX9TyPh05YiKncFwxO0qZnEmn3c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,10 +111,22 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "# 4. Dataloader"
+        "# 4. Dataloader\n",
+        "1. Pre processing\n",
+        "2. Cleaning\n",
+        "3. De-noising"
       ],
       "metadata": {
         "id": "HHzmtR0wz7CJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4.1. Pre processing"
+      ],
+      "metadata": {
+        "id": "obiSYYmJEAlC"
       }
     },
     {
