--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyN75NLRxp5FzB9rXdENNSDL",
+      "authorship_tag": "ABX9TyM7YQ7I+mHULf+zKSWkyLMI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,6 +368,7 @@
       "cell_type": "code",
       "source": [
         "# Importing necessary libraries and modules\n",
+        "\n",
         "import os\n",
         "from PIL import Image\n",
         "import torch\n",
@@ -657,6 +658,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 5. Proposed Solution"
+      ],
+      "metadata": {
+        "id": "t4cihzYpiEfO"
+      }
     },
     {
       "cell_type": "code",
