--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyMCiijxGk0u8BzI5c7l/uqs",
+      "authorship_tag": "ABX9TyPgoUGFNrJmGZ+Q+CBBwObz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1156,10 +1156,31 @@
         "pytorch_train(SC_train_dataloader)\n"
       ],
       "metadata": {
-        "id": "UsybJx_K_sA7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UsybJx_K_sA7",
+        "outputId": "ed4ab8bf-6277-4677-e084-f99bfa06e4bf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 1/10, Loss: 0.7713, Accuracy: 73.59%\n",
+            "Epoch: 2/10, Loss: 0.4316, Accuracy: 80.94%\n",
+            "Epoch: 3/10, Loss: 0.3782, Accuracy: 84.69%\n",
+            "Epoch: 4/10, Loss: 0.3122, Accuracy: 86.88%\n",
+            "Epoch: 5/10, Loss: 0.2829, Accuracy: 87.34%\n",
+            "Epoch: 6/10, Loss: 0.2495, Accuracy: 90.47%\n",
+            "Epoch: 7/10, Loss: 0.2328, Accuracy: 90.47%\n",
+            "Epoch: 8/10, Loss: 0.2434, Accuracy: 90.31%\n",
+            "Epoch: 9/10, Loss: 0.1981, Accuracy: 91.56%\n",
+            "Epoch: 10/10, Loss: 0.2081, Accuracy: 92.50%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1168,19 +1189,46 @@
         "pytorch_test(SC_test_dataloader)"
       ],
       "metadata": {
-        "id": "keOoWvB49rTg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "keOoWvB49rTg",
+        "outputId": "dc2a8721-d7b8-4921-b00d-9dfbf42989dd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Loss: 0.2482, Test Accuracy: 90.62%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Addis Ababa Car Test\n",
+        "pytorch_test(AC_test_dataloader)"
+      ],
       "metadata": {
-        "id": "9XZndS8t0Lwd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9XZndS8t0Lwd",
+        "outputId": "9b03a02d-5e35-4ad0-b07e-dd9ecd603ce5"
       },
-      "execution_count": 53,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Loss: 2.0065, Test Accuracy: 55.00%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
