--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyPgoUGFNrJmGZ+Q+CBBwObz",
+      "authorship_tag": "ABX9TyPCzGxn9Fv0aA3jHNxsIDU1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "QeUEvuqQYnDW"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
       "metadata": {
         "id": "jDqm-d1v_P-O"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +219,7 @@
       "metadata": {
         "id": "kEpo1o7NLjQN"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         "id": "2JRpiSUtDLME",
         "outputId": "7dd8a748-d486-4c3e-9996-6c372cbf9320"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "VM-ZZVCJ-c_k"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -475,7 +475,7 @@
       "metadata": {
         "id": "yY8h2XkAQaID"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +522,7 @@
       "metadata": {
         "id": "0PVox68eGJb9"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,7 +548,7 @@
         "id": "XBEN_qR8L1Zh",
         "outputId": "f4afa852-66f9-4d9a-f256-5ce5c449ab8e"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -594,7 +594,7 @@
         "id": "S0VeoqDjTMT_",
         "outputId": "c12d1e5b-888b-421c-d187-8195aa3b4e5c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -640,7 +640,7 @@
         "id": "FYGziVBNVyEp",
         "outputId": "d114dae8-8fe5-4619-90f7-54dc92a6c1e2"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -686,7 +686,7 @@
         },
         "outputId": "efaee09b-7f39-4aa0-e4a0-ca686640ebed"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -750,7 +750,7 @@
       "metadata": {
         "id": "s6VgwsEN4qw0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -768,7 +768,7 @@
       "metadata": {
         "id": "IUMjx4D-MAso"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -799,7 +799,7 @@
       "metadata": {
         "id": "pOubfJDe4q7s"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -820,7 +820,7 @@
       "metadata": {
         "id": "Ib6c5r3H83hb"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -846,7 +846,7 @@
       "metadata": {
         "id": "BJXMsYwJ5PTb"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -866,7 +866,7 @@
       "metadata": {
         "id": "jYgYjLDj6nxx"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -885,7 +885,7 @@
       "metadata": {
         "id": "OIbVUmbR6tXo"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -894,7 +894,7 @@
       "metadata": {
         "id": "efmFcxCA6yHK"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -928,7 +928,7 @@
       "metadata": {
         "id": "RR1DzZSj4q-c"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -979,7 +979,7 @@
       "metadata": {
         "id": "6n-4ATvS6NIH"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1012,7 @@
       "metadata": {
         "id": "U4gHBvd84rB5"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1045,7 +1045,7 @@
         "id": "Y1Y5elG5zTgs",
         "outputId": "25b9ff0f-f519-4e8f-c859-2956a9d83f57"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1071,7 @@
       "metadata": {
         "id": "OEqbIbCEDgAJ"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1096,7 +1096,7 @@
         "id": "RKj5o8k-wqT3",
         "outputId": "77385355-bbff-48f5-d168-6701b50fc19b"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,7 +1120,7 @@
         "id": "VNwjrBfgwqa0",
         "outputId": "19f73b6e-b9d5-4164-c499-0104fb0991ae"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1137,7 +1137,7 @@
       "metadata": {
         "id": "hxY2sME7wqeQ"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1162,7 +1162,7 @@
         "id": "UsybJx_K_sA7",
         "outputId": "ed4ab8bf-6277-4677-e084-f99bfa06e4bf"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1195,7 +1195,7 @@
         "id": "keOoWvB49rTg",
         "outputId": "dc2a8721-d7b8-4921-b00d-9dfbf42989dd"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1219,7 +1219,7 @@
         "id": "9XZndS8t0Lwd",
         "outputId": "9b03a02d-5e35-4ad0-b07e-dd9ecd603ce5"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1247,32 +1247,32 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import KFold\n",
+        "# from sklearn.model_selection import KFold\n",
+        "# def cros_val(dataset):\n",
+        "#     # Define the number of folds\n",
+        "#     n_splits = 5\n",
         "\n",
-        "# Define the number of folds\n",
-        "n_splits = 5\n",
+        "#     # Define the dataset\n",
+        "#     dataset = CustomDataset(#stir_tree)\n",
         "\n",
-        "# Define the dataset\n",
-        "dataset = CustomDataset(stir_tree)\n",
+        "#     # Split the dataset into K folds\n",
+        "#     kfold = KFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
         "\n",
-        "# Split the dataset into K folds\n",
-        "kfold = KFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+        "#     # Iterate over the folds\n",
+        "#     for fold, (train_indices, test_indices) in enumerate(kfold.split(dataset)):\n",
+        "#         print(f\"Fold {fold+1}\")\n",
         "\n",
-        "# Iterate over the folds\n",
-        "for fold, (train_indices, test_indices) in enumerate(kfold.split(dataset)):\n",
-        "    print(f\"Fold {fold+1}\")\n",
+        "#         # Split the data into train and test sets for this fold\n",
+        "#         train_set = torch.utils.data.Subset(dataset, train_indices)\n",
+        "#         test_set = torch.utils.data.Subset(dataset, test_indices)\n",
         "\n",
-        "    # Split the data into train and test sets for this fold\n",
-        "    train_set = torch.utils.data.Subset(dataset, train_indices)\n",
-        "    test_set = torch.utils.data.Subset(dataset, test_indices)\n",
+        "#         # Create dataloaders for the train and test sets\n",
+        "#         train_dataloader = DataLoader(train_set, batch_size=64, shuffle=True)\n",
+        "#         test_dataloader = DataLoader(test_set, batch_size=64, shuffle=False)\n",
         "\n",
-        "    # Create dataloaders for the train and test sets\n",
-        "    train_dataloader = DataLoader(train_set, batch_size=64, shuffle=True)\n",
-        "    test_dataloader = DataLoader(test_set, batch_size=64, shuffle=False)\n",
-        "\n",
-        "    # Train and test the model for this fold\n",
-        "    pytorch_train(train_dataloader)\n",
-        "    pytorch_test(test_dataloader)\n"
+        "#         # Train and test the model for this fold\n",
+        "#         pytorch_train(train_dataloader)\n",
+        "#         pytorch_test(test_dataloader)\n"
       ],
       "metadata": {
         "id": "QKtboYeYcRPw"
