--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyOFTda5LJvJ8ECcg4qDXUhn",
+      "authorship_tag": "ABX9TyM8fOTR7915/5SDlGw3I+Jx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1246,7 +1246,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lt.figure(figsize=(10, 10))\n",
+        "for i in range(4):\n",
+        "    plt.subplot(1, 4, i+1)\n",
+        "    plt.imshow(torch.transpose(images[i], (0, 2, 1)).numpy().squeeze(), cmap='gray')\n",
+        "    plt.title('Label: {}'.format(labels[i].item()))\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "QKtboYeYcRPw"
       },
